$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-06-17 [B] Fixed category permissions for secondary user groups (thread ID 65551) {eenemeenemuu}
2010-06-17 [B] Fixed issue when editing user albums (thread ID 65542) {eenemeenemuu}
2010-06-17 [B] Fixed issues with usergal_alphatabs plugin (thread ID 65473 & 65547) {eenemeenemuu}
2010-06-16 [C] Fixed line breaks in contact form emails {eenemeenemuu}
2010-06-15 [D] Removed outdated FAQ items {GauGau}
2010-06-12 [O] Updated Hungarian language file (user contribution) {eenemeenemuu}
2010-06-11 [B] Fixed pre-population of user name on comments form (thread ID 65293) {eenemeenemuu}
2010-06-11 [B] Fixed timeout issue when fetching remote files (thread ID 65424) {eenemeenemuu}
2010-06-11 [B] Fixed thumb sharpening (thread ID 65398) {eenemeenemuu}
2010-06-11 [A] Place new comments form accordingly to sort order of comments (thread ID 65461) {eenemeenemuu}
2010-06-10 [A] Added Danish language file (user contribution) {eenemeenemuu}
2010-06-10 [B] Added default value for 'user_profile6' during user creation (thread ID 65451) {eenemeenemuu}
2010-06-10 [B] Fixed HTML validation issue for german lang files - replaced & by &amp; {Timo}
2010-06-07 [D] Updated plugin manager documentation (thread ID 65379) {GauGau}
2010-06-07 [A] Added Hungarian language file (user contribution) {GauGau}
2010-06-07 [M] Counted version count up in SVN repository from cpg1.5.6 to cpg1.5.7 {GauGau}
2010-06-07 [B] Fixed pagination for user manager (thread ID 65365) {eenemeenemuu}
2010-06-06 [O] Updated Finnish language file (user contribution) {eenemeenemuu}
2010-06-04 [M] Release of cpg1.5.6 {GauGau}